# shvm-ai-evals

./: .env.example  README.md  pyproject.toml
Session1_hw/data/: revolut_help_articles.jsonl
Session1_hw/notebooks/: ambiguity_report.py  faq_rag_chatbot.ipynb  migrate_labels.py  persist_full_state.py  topic_extraction.ipynb
Session1_hw/output/: ambiguity_report.html  ambiguity_summary.html  article_keywords.csv  embeddings.npy  report.html  topics_all_sizes.csv
Session1_hw/output/mts_15/: ambiguity_heatmap.html  ambiguity_pairs.html  ambiguity_per_topic.html  ambiguous_articles.csv  article_topics.csv  article_topics.json  report.html  topic_distr.npy  topics.csv
Session1_hw/output/mts_15/model/: topic_embeddings.safetensors  topics.json
Session1_hw/output/mts_3/: ambiguity_heatmap.html  ambiguity_pairs.html  ambiguity_per_topic.html  ambiguous_articles.csv  article_topics.csv  article_topics.json  report.html  topic_distr.npy  topics.csv
Session1_hw/output/mts_3/model/: topic_embeddings.safetensors  topics.json
Session1_hw/output/mts_5/: ambiguity_heatmap.html  ambiguity_pairs.html  ambiguity_per_topic.html  ambiguous_articles.csv  article_topics.csv  article_topics.json  report.html  topic_distr.npy  topics.csv
Session1_hw/output/mts_5/model/: topic_embeddings.safetensors  topics.json
Session1_hw/output/mts_8/: ambiguity_heatmap.html  ambiguity_pairs.html  ambiguity_per_topic.html  ambiguous_articles.csv  article_topics.csv  article_topics.json  report.html  topic_distr.npy  topics.csv
docs/: eval_agent.md  extract_topics.md
(+14 files in other folders)
