[project]
name = "shvm-ai-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.4",
    "gensim>=4.4.0",
    "hdbscan>=0.8.44",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "keybert>=0.9.0",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "umap-learn>=0.5.12",
]
